--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="stylesheet" href="/src/assets/style.css">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
@@ -13,5 +15,8 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <footer>
+      <p> <strong>JeremQuotes</strong> - par <i>Jérémie NGOYI MAOLE</i> - Développeur Full Stack</p>
+  </footer>
   </body>
 </html>
